# EE274_FinalProject

./: README.md  pyproject.toml  requirements.txt
datasets/census_income/: adult_train.csv  adult_train.csv.tabcl  adult_train.csv.zst  adult_train.tabcl
datasets/kaggle-display-advertising-challenge-dataset/: test_sample_10k.csv
scripts/: analyze_data.py  analyze_synthetic_results.py  bench.py  bench_mlp.py  bench_neural.py  generate_synthetic_mi_data.py  parquet_to_csv.py  plot_advanced.py  plot_compression_gain.py  plot_heatmaps.py  plot_mlp_vs_histogram.py  plot_results.py  run_base_sweep.py  run_benchmarks.py  run_mlp_sweep.py  run_synthetic_experiment.py  visualize_forest.py
src/tabcl/: __init__.py  cli.py  codec.py  conditional.py  forest.py  mi.py  mlp_autoregressive.py  mlp_conditional.py  neural_compression.py  tiny_mlp.py
src/tabcl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_mlp.py  test_roundtrip.py  test_tree_recovery.py
